src/main/java/com/example/tpotrilateracion/errors/TamañosDistintos.java
package com.example.tpotrilateracion.errors;

public class Tama単osDistintos extends RuntimeException{
    public Tama単osDistintos() {
        super("Frases de distintos tama単os, no coincide con el tama単o del mensaje");
    }
}
